<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.psyyf2.dissertation.activity.MangeGroup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_edittext"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnergroup"
                    android:layout_width="117dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />



            </LinearLayout>

            <Button
                android:id="@+id/Edit"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/edit_color1"
                android:onClick="changeMode"
                android:text="@string/edit" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="450dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_bg"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:text="Student ID" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:text="Student Name" />

                <TextView
                    android:id="@+id/mark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Mark"
                    android:visibility="invisible" />

            </LinearLayout>

            <ListView
                android:id="@+id/managelist"
                android:layout_width="match_parent"
                android:layout_height="433dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/change"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/edit_color1"
                android:onClick="moveGroup"
                android:text="Change to"
                android:visibility="invisible" />


        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
