<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/stuID4"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:text="@string/textview" />

    <TextView
        android:id="@+id/stuName4"
        android:layout_width="40dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:text="TextView" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="10dp"
        android:layout_height="wrap_content"

        android:layout_weight="1"
        android:gravity="right" />

</LinearLayout>
